@@ -1,5 +1,7 @@
 #!/bin/sh
 prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
 
 usage()
 {
@@ -26,22 +28,22 @@ case "$1" in
 esac
 case $1 in
     --prefix)
-    echo @prefix@
+    echo ${prefix}
      ;;
     --version)
     echo @VERSION@
      ;;
     --cflags)
-    echo -I@prefix@/include 
+    echo -I${prefix}/include 
       ;;
     --libs)
-      echo -L@prefix@/lib -lgeos
+      echo -L${libdir} -lgeos
       ;;
     --ldflags)
-      echo -L@prefix@/lib
+      echo -L${libdir}
       ;;
     --includes)
-      echo @prefix@/include
+      echo ${prefix}/include
       ;;
     --jtsport)
     echo @JTS_PORT@ 
